--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body{
     background-color: gray;
     border: solid 2px black;
     display: grid;
-    grid-template-columns: 100px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 100px 400px 100px;
 
 }
 .grid-item{
