--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@ body{
     background-color: gray;
     border: solid 2px black;
     display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto auto;
+    /* grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto; */
+    grid-template: auto auto auto / auto auto auto;
     grid-template-areas: "header header"
                          "sidebar conteudo-principal"
                          "footer footer"
