--- a/exercicio/style.css
+++ b/exercicio/style.css
@@ -36,3 +36,38 @@ header{
     font-size: 18px;
     font-weight: 600;
 }
+
+/* Main */
+.cards-field{
+    margin-top: 70px;
+    display: grid;
+    grid-template: auto / repeat(5, auto);
+    gap: 50px;
+
+}
+
+/* Footer */
+footer{
+    background-color: #c6c6c6;
+}
+
+footer p{
+    text-align: center;
+    margin: 0;
+    padding: 15px;
+}
+
+.footer{
+    margin-top: 80px;
+    display: grid;
+    grid-template-columns: repeat(2, .25fr);
+    justify-content: center;
+}
+.footer ul{
+    list-style: none;
+
+}
+.footer ul li{
+    margin: 10px 0;
+    text-align: center;
+}
